src/objects/Payment__c.object
<CustomObject>
    <description>Stores related payment information for payment(s) applied to Project(s) (Project__c).</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The amount of the applied payment.</description>
        <inlineHelpText>The amount of the applied payment.</inlineHelpText>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the related Contact record that applied the Payment.</description>
        <inlineHelpText>The Contact who has applied the Payment.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for managing deletion of payment records.</description>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>Captures the date/time that the payment was applied.</description>
        <inlineHelpText>The date that the payment was applied to the project.</inlineHelpText>
        <label>Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Stores the related Project to this Payment.</description>
        <inlineHelpText>Stores the related Project to this Payment.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>